# 3806ICT-Assignment-3-Kenneth-Campbell

./: .gitignore  .gitmodules  3806ICT_Diagrams.drawio  README.md  discretise.py  environment.yml  ros-post-activate.sh  ros-post-deactivate.sh  starttb0.sh  starttb1.sh  tb3_0_points.pcd  tb3_1_points.pcd  view_map.py
Path execution stuff/: CMakeLists.txt
Path execution stuff/scripts/: path_controller.py  paths_service.py
Path execution stuff/srv/: get_paths.srv
catkin_ws/: setup.sh
catkin_ws/src/assignment1_setup/: CMakeLists.txt
catkin_ws/src/assignment2/: CMakeLists.txt
catkin_ws/src/assignment3/: package.xml
catkin_ws/src/assignment3/msg/: Command.msg  Goal.msg  Goals.msg  Obstacle.msg  SensorData.msg
catkin_ws/src/assignment3/src/: interpreter_node.cpp  main.py
catkin_ws/src/assignment3/srv/: UpdateGoals.srv
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/assignment1_setup/: ModelState.h  ModelStateRequest.h  ModelStateResponse.h  Sonars.h
devel/include/assignment3/: CollectData.h  CollectDataRequest.h  CollectDataResponse.h  Command.h  CreatePlan.h  CreatePlanRequest.h  CreatePlanResponse.h  ExecutePlan.h  ExecutePlanRequest.h  ExecutePlanResponse.h  Feedback.h  Goal.h  Goals.h  Map.h  Obstacle.h  Plan.h  ProcessSensorData.h  ProcessSensorDataRequest.h  ProcessSensorDataResponse.h  SensorData.h  State.h  UpdateGoals.h  UpdateGoalsRequest.h  UpdateGoalsResponse.h  ValidatePlan.h  ValidatePlanRequest.h  ValidatePlanResponse.h  Waypoint.h
devel/lib/assignment1_setup/: model_state  noisy_sonars  sonars
devel/lib/assignment2/: controller
devel/lib/assignment3/: controller_node  goal_manager_node  interpreter_node  monitor_node  plan_validator_node  planner_node
src/: combined_file.txt
src/assignment1_setup/: package.xml
src/assignment3/: CMakeLists.txt  package.xml
src/assignment3/Test_Worlds/Models/: bin.urdf  boundary.urdf  box.urdf  obstacle.urdf  rubbish.urdf  target.urdf
src/assignment3/Test_Worlds/Tests/: Test_1 copy.txt  Test_1.txt  Test_2.txt  Test_3.txt
src/assignment3/launch/: ass.launch  bot0.launch  bot1.launch  bots.launch  env.launch  world.launch
src/assignment3/msg/: Feedback.msg  GlobalPoints.msg  Map.msg  SerialisedDict.msg  State.msg
src/assignment3/scripts/: collector.py  controller_node.py  discretise.py  emptier.py  evaluator_node.py  exploration_node.py  explorer.py  federated_learning.py  global_map_server.py  interpreter_node.py  lidar_map.py  main.py  model_aggregator.py  monitor_node.py  path_controller.py  planner_node.py  populate_world.cpp  serialiser.py  train_model.py  turtlebot_env.py
src/assignment3/src/: controller_node.cpp  goal_manager_node.cpp  goal_manager_node.py  interpreter_node.py  main.py  monitor_node.cpp  monitor_node.py  plan_validator_node.cpp  plan_validator_node.py  planner_node.cpp  planner_node.py
src/assignment3/srv/: CollectData.srv  CreatePlan.srv  ExecutePlan.srv  GetPaths.srv  ProcessSensorData.srv  UpdateMap.srv  ValidatePlan.srv
src/assignment3/testing/: launch.sh
(+132 files in other folders)
