<?xml version="1.0"?>
<package format="2">
  <name>assignment3</name>
  <version>0.0.0</version>
  <description>The assignment3 package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
